[package]
name = "blatand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"]}
btleplug = "0.10.4"
glutin = "0.30.3"
glutin-winit = "0.3.0"
winit = "0.28.1"
raw-window-handle = "0.5.0"
egui = "0.21.0"
gl = "0.14.0"

[build-dependencies]
gl_generator = "0.14.0"